--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <a href="index.html" class="home-link"><i class="fas fa-arrow-left"></i> Continue Shopping</a>
+    <a href="shop.html" class="home-link"><i class="fas fa-arrow-left"></i> Continue Shopping</a>
     <img src="logo.png" alt="Jump Sporting Goods Logo" class="logo" />
     <h1>Shopping Cart</h1>
   </header>
@@ -24,7 +24,7 @@
         <i class="fas fa-shopping-bag"></i>
         <h3>Your cart is empty</h3>
         <p>Add some awesome Dryden apparel to get started!</p>
-        <a href="index.html" class="continue-shopping-btn">
+        <a href="shop.html" class="continue-shopping-btn">
           <i class="fas fa-arrow-left"></i> Start Shopping
         </a>
       </div>
