--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
           <p>Parks, Public Works, & Town Hall</p>
         </a>
 
+        <a href="shop.html#recreation" class="selection-card">
+          <div class="card-icon">SPORTS</div>
+          <h3>Recreation & Sports</h3>
+          <p>Sports facilities, equipment, & teams</p>
+        </a>
+
         <a href="shop.html" class="selection-card featured">
           <div class="card-icon">SHOP</div>
           <h3>New Customer / Browse All</h3>
