--- a/shop.html
+++ b/shop.html
@@ -29,29 +29,35 @@
         <div class="customer-category" id="schools">
           <h4><i class="fas fa-graduation-cap"></i> Education</h4>
           <ul>
+            <li><a href="#" class="customer-filter" data-customer="lee-high"><i class="fas fa-chevron-right"></i> Lee High School</a></li>
+            <li><a href="#" class="customer-filter" data-customer="thomas-walker"><i class="fas fa-chevron-right"></i> Thomas Walker High School</a></li>
+            <li><a href="#" class="customer-filter" data-customer="pennington-middle"><i class="fas fa-chevron-right"></i> Pennington Middle School</a></li>
+            <li><a href="#" class="customer-filter" data-customer="jonesville-middle"><i class="fas fa-chevron-right"></i> Jonesville Middle School</a></li>
             <li><a href="#" class="customer-filter" data-customer="dryden-elementary"><i class="fas fa-chevron-right"></i> Dryden Elementary School</a></li>
-            <li><a href="#" class="customer-filter" data-customer="dryden-high"><i class="fas fa-chevron-right"></i> Dryden High School</a></li>
-            <li><a href="#" class="customer-filter" data-customer="river-valley"><i class="fas fa-chevron-right"></i> River Valley Middle School</a></li>
-            <li><a href="#" class="customer-filter" data-customer="st-marys"><i class="fas fa-chevron-right"></i> St. Mary's Academy</a></li>
+            <li><a href="#" class="customer-filter" data-customer="elk-knob-elementary"><i class="fas fa-chevron-right"></i> Elk Knob Elementary School</a></li>
+            <li><a href="#" class="customer-filter" data-customer="st-charles-elementary"><i class="fas fa-chevron-right"></i> St. Charles Elementary School</a></li>
+            <li><a href="#" class="customer-filter" data-customer="flatwoods-elementary"><i class="fas fa-chevron-right"></i> Flatwoods Elementary School</a></li>
+            <li><a href="#" class="customer-filter" data-customer="rose-hill-elementary"><i class="fas fa-chevron-right"></i> Rose Hill Elementary School</a></li>
+            <li><a href="#" class="customer-filter" data-customer="ely-dale-elementary"><i class="fas fa-chevron-right"></i> Ely Dale Elementary School</a></li>
           </ul>
         </div>
         <div class="customer-category" id="emergency">
           <h4><i class="fas fa-fire-extinguisher"></i> Emergency Services</h4>
           <ul>
             <li><a href="#" class="customer-filter" data-customer="dryden-fire"><i class="fas fa-chevron-right"></i> Dryden Fire Department</a></li>
-            <li><a href="#" class="customer-filter" data-customer="county-fire"><i class="fas fa-chevron-right"></i> County Fire Rescue</a></li>
-            <li><a href="#" class="customer-filter" data-customer="dryden-police"><i class="fas fa-chevron-right"></i> Dryden Police Department</a></li>
-            <li><a href="#" class="customer-filter" data-customer="county-sheriff"><i class="fas fa-chevron-right"></i> County Sheriff's Office</a></li>
           </ul>
         </div>
         <div class="customer-category" id="municipal">
           <h4><i class="fas fa-landmark"></i> Municipal & Government</h4>
           <ul>
-            <li><a href="#" class="customer-filter" data-customer="city-parks"><i class="fas fa-chevron-right"></i> City Parks & Recreation</a></li>
-            <li><a href="#" class="customer-filter" data-customer="county-corrections"><i class="fas fa-chevron-right"></i> County Corrections</a></li>
             <li><a href="#" class="customer-filter" data-customer="dept-corrections"><i class="fas fa-chevron-right"></i> Department of Corrections</a></li>
-            <li><a href="#" class="customer-filter" data-customer="public-works"><i class="fas fa-chevron-right"></i> Public Works Department</a></li>
-            <li><a href="#" class="customer-filter" data-customer="dryden-town"><i class="fas fa-chevron-right"></i> Dryden Town Hall</a></li>
+          </ul>
+        </div>
+        <div class="customer-category" id="recreation">
+          <h4><i class="fas fa-volleyball-ball"></i> Recreation & Sports</h4>
+          <ul>
+            <li><a href="#" class="customer-filter" data-customer="jtown-beach"><i class="fas fa-chevron-right"></i> J-Town Beach</a></li>
+            <li><a href="#" class="customer-filter" data-customer="jump-sporting"><i class="fas fa-chevron-right"></i> Jump Sporting Goods</a></li>
           </ul>
         </div>
       </nav>
