added more sections

--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
           <p>Sports facilities, equipment, & teams</p>
         </a>
 
+        <a href="shop.html#religious" class="selection-card">
+          <div class="card-icon">FAITH</div>
+          <h3>Religious</h3>
+          <p>Faith-based apparel & merchandise</p>
+        </a>
+
+        <a href="shop.html#sports" class="selection-card">
+          <div class="card-icon">TEAM</div>
+          <h3>Sports & Teams</h3>
+          <p>Travel ball, sports shirts, & team gear</p>
+        </a>
+
         <a href="shop.html" class="selection-card featured">
           <div class="card-icon">SHOP</div>
           <h3>New Customer / Browse All</h3>
