added new items

--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
 
   <header>
     <a href="shop.html" class="home-link"><i class="fas fa-arrow-left"></i> Continue Shopping</a>
-    <img src="logo.png" alt="Jump Sporting Goods Logo" class="logo" />
+    <img src="logo.png" alt="Jump Sporting Goods Logo" class="logo" loading="lazy" />
     <h1>Shopping Cart</h1>
   </header>
 
