--- a/custom-order.html
+++ b/custom-order.html
@@ -12,7 +12,7 @@
 
   <header>
     <a href="index.html" class="home-link"><i class="fas fa-home"></i> Back to Home</a>
-    <img src="logo.png" alt="Jump Sporting Goods Logo" class="logo" />
+    <img src="logo.png" alt="Jump Sporting Goods Logo" class="logo" loading="lazy" />
     <h1>Custom Orders</h1>
     <div class="cart-icon" onclick="window.location.href='cart.html'">
       <i class="fas fa-shopping-cart"></i>
