--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="welcome-container">
     <header class="welcome-header">
-      <img src="logo.png" alt="Jump Sporting Goods Logo" class="logo" />
+      <img src="logo.png" alt="Jump Sporting Goods Logo" class="logo" loading="lazy" />
       <h1>Welcome to Jump Sporting Goods</h1>
       <p class="tagline">Your Source for Custom Dryden Apparel</p>
     </header>
