organized file structure

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jump Sporting Goods - Welcome</title>
-  <link rel="stylesheet" href="home-style.css">
+  <link rel="stylesheet" href="css/home-style.css">
   <script src="https://kit.fontawesome.com/d105c3cb1d.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
   <div class="welcome-container">
     <header class="welcome-header">
-      <img src="logo.png" alt="Jump Sporting Goods Logo" class="logo" loading="lazy" />
+      <img src="images/logo.png" alt="Jump Sporting Goods Logo" class="logo" loading="lazy" />
       <h1>Welcome to Jump Sporting Goods</h1>
       <p class="tagline">Your Source for Custom Dryden Apparel</p>
     </header>
@@ -20,43 +20,43 @@
       <h2>Who Are You Shopping For?</h2>
       
       <div class="selection-grid">
-        <a href="shop.html#schools" class="selection-card">
+        <a href="pages/shop.html#schools" class="selection-card">
           <div class="card-icon">SCHOOL</div>
           <h3>Schools</h3>
           <p>Elementary, Middle, & High School apparel</p>
         </a>
 
-        <a href="shop.html#emergency" class="selection-card">
+        <a href="pages/shop.html#emergency" class="selection-card">
           <div class="card-icon">RESCUE</div>
           <h3>Emergency Services</h3>
           <p>Fire departments, Police, & Sheriff</p>
         </a>
 
-        <a href="shop.html#municipal" class="selection-card">
+        <a href="pages/shop.html#municipal" class="selection-card">
           <div class="card-icon">CIVIC</div>
           <h3>Municipal & Government</h3>
           <p>Parks, Public Works, & Town Hall</p>
         </a>
 
-        <a href="shop.html#recreation" class="selection-card">
+        <a href="pages/shop.html#recreation" class="selection-card">
           <div class="card-icon">SPORTS</div>
           <h3>Recreation & Sports</h3>
           <p>Sports facilities, equipment, & teams</p>
         </a>
 
-        <a href="shop.html#religious" class="selection-card">
+        <a href="pages/shop.html#religious" class="selection-card">
           <div class="card-icon">FAITH</div>
           <h3>Religious</h3>
           <p>Faith-based apparel & merchandise</p>
         </a>
 
-        <a href="shop.html#sports" class="selection-card">
+        <a href="pages/pages/shop.html#sports" class="selection-card">
           <div class="card-icon">TEAM</div>
           <h3>Sports & Teams</h3>
           <p>Travel ball, sports shirts, & team gear</p>
         </a>
 
-        <a href="shop.html" class="selection-card featured">
+        <a href="pages/shop.html" class="selection-card featured">
           <div class="card-icon">SHOP</div>
           <h3>New Customer / Browse All</h3>
           <p>View our full collection</p>
@@ -68,7 +68,7 @@
         <p>We specialize in custom sublimated apparel for organizations, teams, and events.</p>
         <div class="cta-buttons">
           <a href="tel:276-870-6583" class="contact-btn"><i class="fas fa-phone-alt"></i> Call Us: 276-870-6583</a>
-          <a href="custom-order.html" class="contact-btn secondary"><i class="fas fa-file-invoice"></i> Request a Quote</a>
+          <a href="pages/custom-order.html" class="contact-btn secondary"><i class="fas fa-file-invoice"></i> Request a Quote</a>
         </div>
       </div>
     </main>
@@ -83,6 +83,6 @@
     </footer>
   </div>
 
-  <script src="home.js"></script>
+  <script src="js/home.js"></script>
 </body>
 </html>
