--- a/pages/cart.html
+++ b/pages/cart.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shopping Cart - Jump Sporting Goods</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="cart-style.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/cart-style.css">
   <script src="https://kit.fontawesome.com/d105c3cb1d.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
   <header>
     <a href="shop.html" class="home-link"><i class="fas fa-arrow-left"></i> Continue Shopping</a>
-    <img src="logo.png" alt="Jump Sporting Goods Logo" class="logo" loading="lazy" />
+    <img src="../images/logo.png" alt="Jump Sporting Goods Logo" class="logo" loading="lazy" />
     <h1>Shopping Cart</h1>
   </header>
 
@@ -143,6 +143,6 @@
     </div>
   </footer>
 
-  <script src="cart.js"></script>
+  <script src="../js/cart.js"></script>
 </body>
 </html>
