--- a/pages/custom-order.html
+++ b/pages/custom-order.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Custom Orders - Jump Sporting Goods</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="custom-order-style.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/custom-order-style.css">
   <script src="https://kit.fontawesome.com/d105c3cb1d.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
   <header>
-    <a href="index.html" class="home-link"><i class="fas fa-home"></i> Back to Home</a>
-    <img src="logo.png" alt="Jump Sporting Goods Logo" class="logo" loading="lazy" />
+    <a href="../index.html" class="home-link"><i class="fas fa-home"></i> Back to Home</a>
+    <img src="../images/logo.png" alt="Jump Sporting Goods Logo" class="logo" loading="lazy" />
     <h1>Custom Orders</h1>
     <div class="cart-icon" onclick="window.location.href='cart.html'">
       <i class="fas fa-shopping-cart"></i>
@@ -167,6 +167,6 @@
     </div>
   </footer>
 
-  <script src="custom-order.js"></script>
+  <script src="../js/custom-order.js"></script>
 </body>
 </html>
