added all shopify links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="welcome-header">
       <img src="images/logo.png" alt="Jump Sporting Goods Logo" class="logo" loading="lazy" />
       <h1>Welcome to Jump Sporting Goods</h1>
-      <p class="tagline">Your Source for Custom Dryden Apparel</p>
+      <p class="tagline">Your Source for Custom Apparel for Schools, Teams, and Organizations</p>
     </header>
 
     <main class="customer-selection">
@@ -68,7 +68,6 @@
         <p>We specialize in custom sublimated apparel for organizations, teams, and events.</p>
         <div class="cta-buttons">
           <a href="tel:276-870-6583" class="contact-btn"><i class="fas fa-phone-alt"></i> Call Us: 276-870-6583</a>
-          <a href="pages/custom-order.html" class="contact-btn secondary"><i class="fas fa-file-invoice"></i> Request a Quote</a>
         </div>
       </div>
     </main>
