--- a/pages/shop.html
+++ b/pages/shop.html
@@ -19,7 +19,7 @@
     <aside class="sidebar">
       <h3>Our Customers</h3>
       <div style="margin-bottom: 1rem;">
-        <a href="#" class="filter-link" data-filter="all" style="display: block; padding: 0.5rem; background: #007bff; color: white; text-align: center; border-radius: 5px; text-decoration: none; margin-bottom: 1rem;"><i class="fas fa-th"></i> Show All Products</a>
+        <a href="#" class="filter-link" data-filter="all" style="display: block; padding: 0.5rem; background: #e60000; color: white; text-align: center; border-radius: 5px; text-decoration: none; margin-bottom: 1rem;"><i class="fas fa-th"></i> Show All Products</a>
       </div>
       <nav class="customer-menu">
         <div class="customer-category" id="schools">
@@ -37,10 +37,10 @@
             <li><a href="#" class="customer-filter" data-customer="ely-dale-elementary"><i class="fas fa-chevron-right"></i> Ely Dale Elementary School</a></li>
           </ul>
         </div>
-        <div class="customer-category" id="emergency">
-          <h4><i class="fas fa-fire-extinguisher"></i> Emergency Services</h4>
+        <div class="customer-category" id="religious">
+          <h4><i class="fas fa-cross"></i> Religious</h4>
           <ul>
-            <li><a href="#" class="customer-filter" data-customer="dryden-fire"><i class="fas fa-chevron-right"></i> Dryden Fire Department</a></li>
+            <li><a href="#" class="customer-filter" data-customer="religious-general"><i class="fas fa-chevron-right"></i> Faith-Based Apparel</a></li>
           </ul>
         </div>
         <div class="customer-category" id="municipal">
@@ -56,10 +56,10 @@
             <li><a href="#" class="customer-filter" data-customer="jump-sporting"><i class="fas fa-chevron-right"></i> Jump Sporting Goods</a></li>
           </ul>
         </div>
-        <div class="customer-category" id="religious">
-          <h4><i class="fas fa-cross"></i> Religious</h4>
+        <div class="customer-category" id="emergency">
+          <h4><i class="fas fa-fire-extinguisher"></i> Emergency Services</h4>
           <ul>
-            <li><a href="#" class="customer-filter" data-customer="religious-general"><i class="fas fa-chevron-right"></i> Faith-Based Apparel</a></li>
+            <li><a href="#" class="customer-filter" data-customer="dryden-fire"><i class="fas fa-chevron-right"></i> Dryden Fire Department</a></li>
           </ul>
         </div>
         <div class="customer-category" id="sports">
@@ -86,11 +86,17 @@
 
           <div class="product" data-customer="dryden-elementary">
             <h3>Kids Tee — 'Crusaders' Blue &amp; Yellow Vintage Sports Logo</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Kids Tee — Crusaders Blue & Yellow Vintage Sports Logo">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id="product-component-1770597565385"></div>
           </div>
 
           <div class="product" data-customer="dryden-elementary">
             <h3>Kids Tee — 'Crusaders' Blue &amp; Yellow Vintage Sports Logo</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Kids Tee — Crusaders Blue & Yellow Vintage Sports Logo">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id='product-component-1770610672695'></div>
           </div>
         </div>
@@ -100,11 +106,17 @@
 
           <div class="product" data-customer="st-charles-elementary">
             <h3>St. Charles Elementary Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="St. Charles Elementary Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id="product-component-1770597605669"></div>
           </div>
 
           <div class="product" data-customer="st-charles-elementary">
             <h3>St. Charles Elementary Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="St. Charles Elementary Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id='product-component-1770610159550'></div>
           </div>
         </div>
@@ -114,11 +126,17 @@
 
           <div class="product" data-customer="elk-knob-elementary">
             <h3>Elk Knob Elementary Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Elk Knob Elementary Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id="product-component-1770598827337"></div>
           </div>
 
           <div class="product" data-customer="elk-knob-elementary">
             <h3>Elk Knob Elementary Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Elk Knob Elementary Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id="product-component-1770609581854"></div>
           </div>
         </div>
@@ -128,6 +146,9 @@
 
           <div class="product" data-customer="rose-hill-elementary">
             <h3>Rose Hill Elementary Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Rose Hill Elementary Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id="product-component-1770598897967"></div>
           </div>
         </div>
@@ -137,11 +158,17 @@
 
           <div class="product" data-customer="flatwoods-elementary">
             <h3>Flatwoods Elementary Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Flatwoods Elementary Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id="product-component-1770597995105"></div>
           </div>
 
           <div class="product" data-customer="flatwoods-elementary">
             <h3>Flatwoods Elementary Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Flatwoods Elementary Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id='product-component-1770609968234'></div>
           </div>
         </div>
@@ -151,16 +178,25 @@
 
           <div class="product" data-customer="lee-high">
             <h3>Lee High School Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Lee High School Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id="product-component-1770598655623"></div>
           </div>
 
           <div class="product" data-customer="lee-high">
             <h3>Lee High School Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Lee High School Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id='product-component-1770610526380'></div>
           </div>
 
           <div class="product" data-customer="lee-high">
             <h3>Lee High School Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Lee High School Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id='product-component-1770610600007'></div>
           </div>
         </div>
@@ -170,6 +206,9 @@
 
           <div class="product" data-customer="pennington-middle">
             <h3>Pennington Middle Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Pennington Middle Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id="product-component-1770598074869"></div>
           </div>
         </div>
@@ -179,6 +218,9 @@
 
           <div class="product" data-customer="thomas-walker">
             <h3>Thomas Walker High School Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Thomas Walker High School Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id="product-component-1770598573840"></div>
           </div>
         </div>
@@ -188,6 +230,9 @@
 
           <div class="product" data-customer="jonesville-middle">
             <h3>Jonesville Middle Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Jonesville Middle Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id="product-component-1770598155984"></div>
           </div>
         </div>
@@ -197,6 +242,9 @@
 
           <div class="product" data-customer="religious-general">
             <h3>Faith-Based Apparel Tee</h3>
+            <button class="view-shirt-btn" data-image="" data-title="Faith-Based Apparel Tee">
+              <i class="fas fa-eye"></i> View Shirt
+            </button>
             <div id="product-component-1770598284135"></div>
           </div>
         </div>
@@ -3497,6 +3545,13 @@
     </div>
   </section>
     </main>
+  </div>
+
+  <!-- Image Modal -->
+  <div id="imageModal" class="image-modal">
+    <span class="image-modal-close">&times;</span>
+    <img class="image-modal-content" id="modalImage" alt="">
+    <div id="imageCaption"></div>
   </div>
 
   <footer>
