--- a/pages/shop.html
+++ b/pages/shop.html
@@ -86,7 +86,7 @@
 
           <div class="product" data-customer="dryden-elementary">
             <h3>Kids Tee — 'Crusaders' Blue &amp; Yellow Vintage Sports Logo</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Kids Tee — Crusaders Blue & Yellow Vintage Sports Logo">
+            <button class="view-shirt-btn" data-image="../images/DrydenE.webp" data-title="Kids Tee — Crusaders Blue & Yellow Vintage Sports Logo">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id="product-component-1770597565385"></div>
@@ -94,7 +94,7 @@
 
           <div class="product" data-customer="dryden-elementary">
             <h3>Kids Tee — 'Crusaders' Blue &amp; Yellow Vintage Sports Logo</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Kids Tee — Crusaders Blue & Yellow Vintage Sports Logo">
+            <button class="view-shirt-btn" data-image="../images/2ndDrydenE.webp" data-title="Kids Tee — Crusaders Blue & Yellow Vintage Sports Logo">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id='product-component-1770610672695'></div>
@@ -106,7 +106,7 @@
 
           <div class="product" data-customer="st-charles-elementary">
             <h3>St. Charles Elementary Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="St. Charles Elementary Tee">
+            <button class="view-shirt-btn" data-image="../images/1stCharlesE.webp" data-title="St. Charles Elementary Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id="product-component-1770597605669"></div>
@@ -114,7 +114,7 @@
 
           <div class="product" data-customer="st-charles-elementary">
             <h3>St. Charles Elementary Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="St. Charles Elementary Tee">
+            <button class="view-shirt-btn" data-image="../images/2ndCharlesE.webp" data-title="St. Charles Elementary Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id='product-component-1770610159550'></div>
@@ -126,7 +126,7 @@
 
           <div class="product" data-customer="elk-knob-elementary">
             <h3>Elk Knob Elementary Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Elk Knob Elementary Tee">
+            <button class="view-shirt-btn" data-image="../images/1stElkKnobE.webp" data-title="Elk Knob Elementary Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id="product-component-1770598827337"></div>
@@ -134,7 +134,7 @@
 
           <div class="product" data-customer="elk-knob-elementary">
             <h3>Elk Knob Elementary Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Elk Knob Elementary Tee">
+            <button class="view-shirt-btn" data-image="../images/2ndElkKnobE.webp" data-title="Elk Knob Elementary Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id="product-component-1770609581854"></div>
@@ -146,7 +146,7 @@
 
           <div class="product" data-customer="rose-hill-elementary">
             <h3>Rose Hill Elementary Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Rose Hill Elementary Tee">
+            <button class="view-shirt-btn" data-image="../images/RoseHillE.webp" data-title="Rose Hill Elementary Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id="product-component-1770598897967"></div>
@@ -158,7 +158,7 @@
 
           <div class="product" data-customer="flatwoods-elementary">
             <h3>Flatwoods Elementary Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Flatwoods Elementary Tee">
+            <button class="view-shirt-btn" data-image="../images/FirstFlatWoodsE.webp" data-title="Flatwoods Elementary Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id="product-component-1770597995105"></div>
@@ -166,7 +166,7 @@
 
           <div class="product" data-customer="flatwoods-elementary">
             <h3>Flatwoods Elementary Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Flatwoods Elementary Tee">
+            <button class="view-shirt-btn" data-image="../images/2ndFlatwoodsE.webp" data-title="Flatwoods Elementary Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id='product-component-1770609968234'></div>
@@ -178,7 +178,7 @@
 
           <div class="product" data-customer="lee-high">
             <h3>Lee High School Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Lee High School Tee">
+            <button class="view-shirt-btn" data-image="../images/1stLeeHigh.webp" data-title="Lee High School Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id="product-component-1770598655623"></div>
@@ -186,7 +186,7 @@
 
           <div class="product" data-customer="lee-high">
             <h3>Lee High School Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Lee High School Tee">
+            <button class="view-shirt-btn" data-image="../images/2ndLeeHigh.webp" data-title="Lee High School Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id='product-component-1770610526380'></div>
@@ -194,7 +194,7 @@
 
           <div class="product" data-customer="lee-high">
             <h3>Lee High School Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Lee High School Tee">
+            <button class="view-shirt-btn" data-image="../images/3rdLeeHigh.webp" data-title="Lee High School Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id='product-component-1770610600007'></div>
@@ -206,7 +206,7 @@
 
           <div class="product" data-customer="pennington-middle">
             <h3>Pennington Middle Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Pennington Middle Tee">
+            <button class="view-shirt-btn" data-image="../images/1stPMiddle.webp" data-title="Pennington Middle Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id="product-component-1770598074869"></div>
@@ -218,7 +218,7 @@
 
           <div class="product" data-customer="thomas-walker">
             <h3>Thomas Walker High School Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Thomas Walker High School Tee">
+            <button class="view-shirt-btn" data-image="../images/1stThomasH.webp" data-title="Thomas Walker High School Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id="product-component-1770598573840"></div>
@@ -230,7 +230,7 @@
 
           <div class="product" data-customer="jonesville-middle">
             <h3>Jonesville Middle Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Jonesville Middle Tee">
+            <button class="view-shirt-btn" data-image="../images/1stJMiddle.webp" data-title="Jonesville Middle Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id="product-component-1770598155984"></div>
@@ -242,7 +242,7 @@
 
           <div class="product" data-customer="religious-general">
             <h3>Faith-Based Apparel Tee</h3>
-            <button class="view-shirt-btn" data-image="" data-title="Faith-Based Apparel Tee">
+            <button class="view-shirt-btn" data-image="../images/1stFaith.webp" data-title="Faith-Based Apparel Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id="product-component-1770598284135"></div>
