--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jump Sporting Goods - Welcome</title>
+  <meta name="description" content="Custom apparel and sublimated shirts for schools, teams, and organizations in Dryden, VA.">
+  <link rel="canonical" href="https://www.jumpsportinggoods.com/">
+  <meta property="og:title" content="Jump Sporting Goods">
+  <meta property="og:description" content="Custom apparel and sublimated shirts for schools, teams, and organizations in Dryden, VA.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.jumpsportinggoods.com/">
+  <meta property="og:image" content="https://www.jumpsportinggoods.com/images/logo.png">
+  <meta property="og:image:alt" content="Jump Sporting Goods logo">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Jump Sporting Goods">
+  <meta name="twitter:description" content="Custom apparel and sublimated shirts for schools, teams, and organizations in Dryden, VA.">
+  <meta name="twitter:image" content="https://www.jumpsportinggoods.com/images/logo.png">
   <link rel="stylesheet" href="css/home-style.css">
   <script src="https://kit.fontawesome.com/d105c3cb1d.js" crossorigin="anonymous"></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/favicon/site.webmanifest">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Jump Sporting Goods",
+    "url": "https://www.jumpsportinggoods.com/",
+    "logo": "https://www.jumpsportinggoods.com/images/logo.png",
+    "telephone": "+1-276-870-6583",
+    "areaServed": "Dryden, VA"
+  }
+  </script>
 </head>
 <body>
 
