--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
       </div>
       <p>© <span id="year"></span> Jump Sporting Goods — Dryden, VA</p>
+      <p class="footer-credit">Built by <a href="https://smithdigitals.com/" target="_blank" rel="noopener noreferrer">Smith Digitals</a></p>
     </footer>
   </div>
 
