--- a/pages/shop.html
+++ b/pages/shop.html
@@ -34,7 +34,7 @@
             <li><a href="#" class="customer-filter" data-customer="st-charles-elementary"><i class="fas fa-chevron-right"></i> St. Charles Elementary School</a></li>
             <li><a href="#" class="customer-filter" data-customer="flatwoods-elementary"><i class="fas fa-chevron-right"></i> Flatwoods Elementary School</a></li>
             <li><a href="#" class="customer-filter" data-customer="rose-hill-elementary"><i class="fas fa-chevron-right"></i> Rose Hill Elementary School</a></li>
-            <li><a href="#" class="customer-filter" data-customer="ely-dale-elementary"><i class="fas fa-chevron-right"></i> ElyDale Elementary School</a></li>
+            <li><a href="#" class="customer-filter" data-customer="ely-dale-elementary"><i class="fas fa-chevron-right"></i> Elydale middle school</a></li>
           </ul>
         </div>
         <div class="customer-category" id="religious">
@@ -250,10 +250,10 @@
         </div>
 
         <div class="products-grid" id="elydale-products-grid">
-          <h2 class="category-header" data-customer="ely-dale-elementary">ElyDale Elementary School</h2>
+          <h2 class="category-header" data-customer="ely-dale-elementary">Elydale middle school</h2>
 
           <div class="product" data-customer="ely-dale-elementary">
-            <button class="view-shirt-btn" data-image="../images/1stElyDale.webp" data-title="ElyDale Elementary Tee">
+            <button class="view-shirt-btn" data-image="../images/1stElydaleMiddleSchool.webp" data-title="Elydale middle school Tee">
               <i class="fas fa-eye"></i> View Shirt
             </button>
             <div id='product-component-1771214148142'></div>
