--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <meta name="twitter:image" content="https://www.jumpsportinggoods.com/images/logo.png">
   <link rel="stylesheet" href="css/home-style.css">
   <script src="https://kit.fontawesome.com/d105c3cb1d.js" crossorigin="anonymous"></script>
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/favicon/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -77,7 +77,7 @@
           <p>Fire departments, Police, & Sheriff</p>
         </a>
 
-        <a href="pages/pages/shop.html#sports" class="selection-card">
+        <a href="pages/shop.html#sports" class="selection-card">
           <div class="card-icon">TEAM</div>
           <h3>Sports & Teams</h3>
           <p>Travel ball, sports shirts, & team gear</p>
@@ -101,9 +101,7 @@
 
     <footer>
       <div class="social-links">
-        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.facebook.com/jumpsportinggoods" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
       </div>
       <p>© <span id="year"></span> Jump Sporting Goods — Dryden, VA</p>
       <p class="footer-credit">Built by <a href="https://smithdigitals.com/" target="_blank" rel="noopener noreferrer">Smith Digitals</a></p>
