--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <p>Travel ball, sports shirts, & team gear</p>
         </a>
 
-        <a href="pages/shop.html" class="selection-card featured">
+        <a href="pages/shop.html#customers" class="selection-card featured">
           <div class="card-icon">SHOP</div>
           <h3>New Customer / Browse All</h3>
           <p>View our full collection</p>
