--- a/pages/shop.html
+++ b/pages/shop.html
@@ -16,7 +16,7 @@
   </header>
 
   <div class="container">
-    <aside class="sidebar">
+    <aside class="sidebar" id="customers">
       <h3>Our Customers</h3>
       <div style="margin-bottom: 1rem;">
         <a href="#" class="filter-link" data-filter="all" style="display: block; padding: 0.5rem; background: #e60000; color: white; text-align: center; border-radius: 5px; text-decoration: none; margin-bottom: 1rem;"><i class="fas fa-th"></i> Show All Products</a>
