--- a/pages/shop.html
+++ b/pages/shop.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jump Sporting Goods</title>
+  <link rel="canonical" href="https://www.jumpsportinggoods.com/pages/shop.html">
   <link rel="stylesheet" href="../css/style.css">
   <script src="https://kit.fontawesome.com/d105c3cb1d.js" crossorigin="anonymous"></script>
+  <script src="https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js"></script>
 </head>
 <body>
 
